--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-counter",
+  "name": "app-dice",
   "version": "0.1.0",
   "description": "Template for a Netless Community App",
   "private": true,
